[package]
name = "sp3"
version = "0.0.8"
license = "MIT OR Apache-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "IGS SP3 file parser"
homepage = "https://github.com/gwbres/sp3"
repository = "https://github.com/gwbres/sp3"
keywords = ["gnss", "timing", "gps", "glonass", "galileo"]
categories = ["science", "science::geo", "parsing"]
edition = "2021"
readme = "README.md"

[features]
default = [] # no features by default

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docrs", "--generate-link-to-definition"]

[build-dependencies]

[dependencies]
rinex = { version = "0.12", features = ["serde"] }
hifitime = "3.8.4"
thiserror = "1"
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }
flate2 = { version = "1.0.24", optional = true, default-features = false, features = ["zlib"] }

[dev-dependencies]
